[gd_scene load_steps=2 format=3 uid="uid://dhkwgqlm4owie"]

[ext_resource type="Script" path="res://gui/canvas/properties/FontFilePropertyEditor.gd" id="1_yiha8"]

[node name="FontFilePropertyEditor" type="MarginContainer"]
offset_right = 142.0
offset_bottom = 23.0
theme_type_variation = &"FontFilePropertyEditor"
script = ExtResource("1_yiha8")

[node name="Layout" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="PropertyName" type="Label" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "Property Name"

[node name="Spacer" type="Control" parent="Layout"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="FontSelector" type="VBoxContainer" parent="Layout"]
layout_mode = 2

[node name="FontName" type="Label" parent="Layout/FontSelector"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
visible_characters = 16

[node name="FileButton" type="Button" parent="Layout/FontSelector"]
unique_name_in_owner = true
layout_mode = 2
text = "Select"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(800, 600)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.ttf,*.otf,*.woff,*.woff2,*.pfb,*.pfm")
use_native_dialog = true
